updating to custom nuget packages for Spring.Amqp ver 09.5.7620

--- a/Spring.RabbitQuickStart/src/Spring/Spring.RabbitQuickStart.BrokerConfiguration/app.config
+++ b/Spring.RabbitQuickStart/src/Spring/Spring.RabbitQuickStart.BrokerConfiguration/app.config
@@ -1,6 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-
   <appSettings>
     <add key="MARKET_DATA_EXCHANGE_NAME" value="APP.STOCK.MARKETDATA" />
     <add key="STOCK_REQUEST_QUEUE_NAME" value="APP.STOCK.REQUEST" />
@@ -8,7 +7,6 @@
     <add key="MARKET_DATA_QUEUE_NAME" value="APP.STOCK.MARKETDATA" />
     <add key="MARKET_DATA_ROUTING_KEY" value="APP.STOCK.QUOTES.#" />
   </appSettings>
-  
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
   </startup>
@@ -22,14 +20,19 @@
         <assemblyIdentity name="Spring.Core" publicKeyToken="65e474d141e25e07" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-1.3.1.40711" newVersion="1.3.1.40711" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Common.Logging" publicKeyToken="af08829b84f0328e" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.0.0.0" newVersion="2.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0" />
+      </dependentAssembly>
     </assemblyBinding>
-
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="Common.Logging"
-                          publicKeyToken="AF08829B84F0328E" />
-        <bindingRedirect oldVersion="1.2.0.0"
-                         newVersion="2.0.0.0"/>
+        <assemblyIdentity name="Common.Logging" publicKeyToken="AF08829B84F0328E" />
+        <bindingRedirect oldVersion="1.2.0.0" newVersion="2.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
