--- a/Spring.Amqp.HelloWorld/Spring.Amqp.HelloWorld.BrokerConfiguration/packages.config
+++ b/Spring.Amqp.HelloWorld/Spring.Amqp.HelloWorld.BrokerConfiguration/packages.config
@@ -1,6 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="RabbitMQ.Client" version="2.5.1" />
   <package id="Common.Logging" version="2.0.0" />
+  <package id="Newtonsoft.Json" version="4.0.3" />
+  <package id="RabbitMQ.Client" version="2.6.1" />
+  <package id="Spring.Aop" version="1.3.2" />
   <package id="Spring.Core" version="1.3.2" />
+  <package id="Spring.Data" version="1.3.2" />
+  <package id="Spring.Messaging.Amqp" version="0.9.5.7620" />
+  <package id="Spring.Messaging.Amqp.Rabbit" version="0.9.5.7620" />
 </packages>
