--- a/Spring.RabbitQuickStart/src/Spring/Spring.RabbitQuickStart.Client/Spring.RabbitQuickStart.Client.2010.csproj
+++ b/Spring.RabbitQuickStart/src/Spring/Spring.RabbitQuickStart.Client/Spring.RabbitQuickStart.Client.2010.csproj
@@ -58,11 +58,13 @@
     <Reference Include="Common.Logging">
       <HintPath>..\..\..\..\packages\Common.Logging.2.0.0\lib\2.0\Common.Logging.dll</HintPath>
     </Reference>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>..\..\..\..\packages\Newtonsoft.Json.4.0.2\lib\net40\Newtonsoft.Json.dll</HintPath>
+    <Reference Include="Newtonsoft.Json, Version=4.0.3.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\packages\Newtonsoft.Json.4.0.3\lib\net40\Newtonsoft.Json.dll</HintPath>
     </Reference>
-    <Reference Include="RabbitMQ.Client">
-      <HintPath>..\..\..\..\packages\RabbitMQ.Client.2.5.1\lib\net30\RabbitMQ.Client.dll</HintPath>
+    <Reference Include="RabbitMQ.Client, Version=2.6.1.0, Culture=neutral, PublicKeyToken=89e7d7c5feba84ce, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\packages\RabbitMQ.Client.2.6.1\lib\net30\RabbitMQ.Client.dll</HintPath>
     </Reference>
     <Reference Include="Spring.Aop">
       <HintPath>..\..\..\..\packages\Spring.Aop.1.3.2\lib\net40\Spring.Aop.dll</HintPath>
@@ -70,18 +72,19 @@
     <Reference Include="Spring.Core">
       <HintPath>..\..\..\..\packages\Spring.Core.1.3.2\lib\net40\Spring.Core.dll</HintPath>
     </Reference>
-    <Reference Include="Spring.Data">
+    <Reference Include="Spring.Data, Version=1.3.2.40943, Culture=neutral, PublicKeyToken=65e474d141e25e07, processorArchitecture=MSIL">
       <HintPath>..\..\..\..\packages\Spring.Data.1.3.2\lib\net40\Spring.Data.dll</HintPath>
     </Reference>
-    <Reference Include="Spring.Messaging.Amqp">
-      <HintPath>..\..\..\..\packages\Spring.Messaging.Amqp.1.0\lib\net40\Spring.Messaging.Amqp.dll</HintPath>
-    </Reference>
-    <Reference Include="Spring.Messaging.Amqp.Rabbit">
-      <HintPath>..\..\..\..\packages\Spring.Messaging.Amqp.Rabbit.1.0\lib\net40\Spring.Messaging.Amqp.Rabbit.dll</HintPath>
-    </Reference>
-    <Reference Include="Spring.Threading, Version=1.1.2.20125, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="Spring.Messaging.Amqp, Version=0.9.5.7620, Culture=neutral, PublicKeyToken=2954ea1110aebcfa, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\packages\Spring.Threading.1.0\lib\Spring.Threading.dll</HintPath>
+      <HintPath>..\..\..\..\packages\Spring.Messaging.Amqp.0.9.5.7620\lib\net40\Spring.Messaging.Amqp.dll</HintPath>
+    </Reference>
+    <Reference Include="Spring.Messaging.Amqp.Rabbit, Version=0.9.5.7620, Culture=neutral, PublicKeyToken=2954ea1110aebcfa, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\packages\Spring.Messaging.Amqp.Rabbit.0.9.5.7620\lib\net40\Spring.Messaging.Amqp.Rabbit.dll</HintPath>
+    </Reference>
+    <Reference Include="Spring.Threading, Version=1.0.0.29117, Culture=neutral, PublicKeyToken=bbc1abe154051bac, processorArchitecture=MSIL">
+      <HintPath>..\..\..\..\packages\Spring.Messaging.Amqp.Rabbit.0.9.5.7620\lib\net40\Spring.Threading.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
