--- a/Spring.RabbitQuickStart/src/Spring/Spring.RabbitQuickStart.Server/App.config
+++ b/Spring.RabbitQuickStart/src/Spring/Spring.RabbitQuickStart.Server/App.config
@@ -48,14 +48,19 @@
         <assemblyIdentity name="Spring.Core" publicKeyToken="65e474d141e25e07" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-1.3.1.40711" newVersion="1.3.1.40711" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Common.Logging" publicKeyToken="af08829b84f0328e" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.0.0.0" newVersion="2.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0" />
+      </dependentAssembly>
     </assemblyBinding>
-
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="Common.Logging"
-                          publicKeyToken="AF08829B84F0328E" />
-        <bindingRedirect oldVersion="1.2.0.0"
-                         newVersion="2.0.0.0"/>
+        <assemblyIdentity name="Common.Logging" publicKeyToken="AF08829B84F0328E" />
+        <bindingRedirect oldVersion="1.2.0.0" newVersion="2.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
