--- a/Spring.Amqp.HelloWorld/Spring.Amqp.HelloWorld.Producer/packages.config
+++ b/Spring.Amqp.HelloWorld/Spring.Amqp.HelloWorld.Producer/packages.config
@@ -1,12 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Common.Logging" version="2.0.0" />
-  <package id="Newtonsoft.Json" version="4.0.3" />
+  <package id="Common.Logging" version="2.1.1" targetFramework="net40" />
+  <package id="Newtonsoft.Json" version="4.5.10" targetFramework="net40" />
   <package id="RabbitMQ.Client" version="2.5.1" />
-  <package id="RabbitMQ.Client" version="2.6.1" />
+  <package id="RabbitMQ.Client" version="2.8.7" targetFramework="net40" />
   <package id="Spring.Aop" version="1.3.2" />
   <package id="Spring.Core" version="1.3.2" />
   <package id="Spring.Data" version="1.3.2" />
-  <package id="Spring.Messaging.Amqp" version="0.9.6" />
-  <package id="Spring.Messaging.Amqp.Rabbit" version="0.9.6" />
+  <package id="Spring.Messaging.Amqp" version="0.9.9.2000" targetFramework="net40" />
+  <package id="Spring.Messaging.Amqp.Rabbit" version="0.9.9.2000" targetFramework="net40" />
 </packages>
