--- a/Spring.RabbitQuickStart/src/Spring/Spring.RabbitQuickStart.Server/Spring.RabbitQuickStart.Server.2010.csproj
+++ b/Spring.RabbitQuickStart/src/Spring/Spring.RabbitQuickStart.Server/Spring.RabbitQuickStart.Server.2010.csproj
@@ -53,16 +53,17 @@
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Common.Logging">
-      <HintPath>..\..\..\..\packages\Common.Logging.2.0.0\lib\2.0\Common.Logging.dll</HintPath>
-    </Reference>
-    <Reference Include="Newtonsoft.Json, Version=4.0.3.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+    <Reference Include="Common.Logging, Version=2.1.1.0, Culture=neutral, PublicKeyToken=af08829b84f0328e, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\packages\Newtonsoft.Json.4.0.3\lib\net40\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\..\..\..\packages\Common.Logging.2.1.1\lib\net40\Common.Logging.dll</HintPath>
     </Reference>
-    <Reference Include="RabbitMQ.Client, Version=2.6.1.0, Culture=neutral, PublicKeyToken=89e7d7c5feba84ce, processorArchitecture=MSIL">
+    <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\packages\RabbitMQ.Client.2.6.1\lib\net30\RabbitMQ.Client.dll</HintPath>
+      <HintPath>..\..\..\..\packages\Newtonsoft.Json.4.5.10\lib\net40\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="RabbitMQ.Client, Version=2.8.7.0, Culture=neutral, PublicKeyToken=89e7d7c5feba84ce, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\packages\RabbitMQ.Client.2.8.7\lib\net30\RabbitMQ.Client.dll</HintPath>
     </Reference>
     <Reference Include="Spring.Aop">
       <HintPath>..\..\..\..\packages\Spring.Aop.1.3.2\lib\net40\Spring.Aop.dll</HintPath>
@@ -73,13 +74,13 @@
     <Reference Include="Spring.Data, Version=1.3.2.40943, Culture=neutral, PublicKeyToken=65e474d141e25e07, processorArchitecture=MSIL">
       <HintPath>..\..\..\..\packages\Spring.Data.1.3.2\lib\net40\Spring.Data.dll</HintPath>
     </Reference>
-    <Reference Include="Spring.Messaging.Amqp, Version=0.9.6.0, Culture=neutral, PublicKeyToken=2954ea1110aebcfa, processorArchitecture=MSIL">
+    <Reference Include="Spring.Messaging.Amqp, Version=0.9.9.2000, Culture=neutral, PublicKeyToken=2954ea1110aebcfa, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\packages\Spring.Messaging.Amqp.0.9.6\lib\net40\Spring.Messaging.Amqp.dll</HintPath>
+      <HintPath>..\..\..\..\packages\Spring.Messaging.Amqp.0.9.9.2000\lib\net40\Spring.Messaging.Amqp.dll</HintPath>
     </Reference>
-    <Reference Include="Spring.Messaging.Amqp.Rabbit, Version=0.9.6.0, Culture=neutral, PublicKeyToken=2954ea1110aebcfa, processorArchitecture=MSIL">
+    <Reference Include="Spring.Messaging.Amqp.Rabbit, Version=0.9.9.2000, Culture=neutral, PublicKeyToken=2954ea1110aebcfa, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\packages\Spring.Messaging.Amqp.Rabbit.0.9.6\lib\net40\Spring.Messaging.Amqp.Rabbit.dll</HintPath>
+      <HintPath>..\..\..\..\packages\Spring.Messaging.Amqp.Rabbit.0.9.9.2000\lib\net40\Spring.Messaging.Amqp.Rabbit.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
