--- a/Spring.Amqp.HelloWorld/Spring.Amqp.HelloWorld.Producer/packages.config
+++ b/Spring.Amqp.HelloWorld/Spring.Amqp.HelloWorld.Producer/packages.config
@@ -4,9 +4,9 @@
   <package id="Newtonsoft.Json" version="4.5.10" targetFramework="net40" />
   <package id="RabbitMQ.Client" version="2.5.1" />
   <package id="RabbitMQ.Client" version="2.8.7" targetFramework="net40" />
-  <package id="Spring.Aop" version="1.3.2" />
-  <package id="Spring.Core" version="1.3.2" />
-  <package id="Spring.Data" version="1.3.2" />
+  <package id="Spring.Aop" version="1.3.2" targetFramework="net40" />
+  <package id="Spring.Core" version="1.3.2" targetFramework="net40" />
+  <package id="Spring.Data" version="1.3.2" targetFramework="net40" />
   <package id="Spring.Messaging.Amqp" version="0.9.9.2000" targetFramework="net40" />
   <package id="Spring.Messaging.Amqp.Rabbit" version="0.9.9.2000" targetFramework="net40" />
 </packages>
