--- a/packages/Spring.Data.1.3.2/Spring.Data.1.3.2.nuspec
+++ b/packages/Spring.Data.1.3.2/Spring.Data.1.3.2.nuspec
@@ -8,7 +8,7 @@
     <owners>SpringSource</owners>
     <licenseUrl>http://www.springframework.net/license.html</licenseUrl>
     <projectUrl>http://www.springframework.net/</projectUrl>
-    <iconUrl>http://springframework.net/images/SpringSource_Leaves32x32.png</iconUrl>
+    <iconUrl>https://springframework.net/images/SpringSource_Leaves32x32.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Interfaces and classes that provide Data access support in Spring.Net</description>
     <summary>Interfaces and classes that provide Data access support in Spring.Net</summary>
