--- a/packages/Spring.Messaging.Amqp.Rabbit.0.9.9.2000/Spring.Messaging.Amqp.Rabbit.0.9.9.2000.nuspec
+++ b/packages/Spring.Messaging.Amqp.Rabbit.0.9.9.2000/Spring.Messaging.Amqp.Rabbit.0.9.9.2000.nuspec
@@ -8,7 +8,7 @@
     <owners>SpringSource</owners>
     <licenseUrl>http://www.springframework.net/license.html</licenseUrl>
     <projectUrl>http://www.springframework.net/</projectUrl>
-    <iconUrl>http://springframework.net/images/SpringSource_Leaves100x100.png</iconUrl>
+    <iconUrl>https://springframework.net/images/SpringSource_Leaves100x100.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>The Spring AMQP project applies core Spring concepts to the development of AMQP-based messaging solutions. We provide a "template" as a high-level abstraction for sending and receiving messages. We also provide support for Message-driven POCOs. These libraries facilitate management of AMQP resources while promoting the use of dependency injection and declarative configuration.</description>
     <summary>The Spring AMQP project applies core Spring concepts to the development of AMQP-based messaging solutions. We provide a "template" as a high-level abstraction for sending and receiving messages. We also provide support for Message-driven POCOs. These libraries facilitate management of AMQP resources while promoting the use of dependency injection and declarative configuration.</summary>
